--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "socket.io-client": "^4.7.5"
   }
 }
